--- a/build.config
+++ b/build.config
@@ -1,11 +1,9 @@
 #Where to put the built docker image
-REPO="angelnu/myRepo"
+REPO="shoginn/adsbhub"
 
-#Is the dockerfile in a subfolder
-#DOCKER_FOLDER="image"
 
 #Base image for each arch
-BASE=debian:stretch-slim
+BASE=alpine
 BASE_amd64="amd64/$BASE"
 BASE_arm64="arm64v8/$BASE"
 BASE_arm="arm32v6/$BASE"
