--- a/travis/build.config
+++ b/travis/build.config
@@ -1,5 +1,14 @@
-#Where to put the built docker image
+# Where to put the built docker image
 REPO="shoginn/adsbhub"
 
-#Base image for each arch
+# Base image for each arch
 BASE=alpine
+
+# Architectures to build
+ARCHITECTURES="arm arm64 amd64"
+
+# Metadata Variables
+MAINTAINER="ginnserv@gmail.com"
+NAME="Docker ADS-B - adsbhub"
+DESCRIPTION="Docker container for ADS-B - This is the adsbhub.org component"
+URL="https://github.com/ShoGinn/adsbhub"
