--- a/Dockerfile.cross
+++ b/Dockerfile.cross
@@ -1,5 +1,4 @@
-ARG BASE=alpine
-
+ARG BASE=
 FROM $BASE
 
 RUN apk add --no-cache socat iputils
@@ -9,11 +8,19 @@ COPY adsbhub-client.sh /usr/local/bin/adsbhub-client
 ENTRYPOINT ["adsbhub-client"]
 
 # Metadata
-ARG VCS_REF="Unknown"
-LABEL maintainer="ginnserv@gmail.com" \
-      org.label-schema.name="Docker ADS-B - adsbhub" \
-      org.label-schema.description="Docker container for ADS-B - This is the adsbhub.org component" \
-      org.label-schema.url="https://github.com/ShoGinn/adsbhub" \
-      org.label-schema.vcs-ref="${VCS_REF}" \
-      org.label-schema.vcs-url="https://github.com/ShoGinn/adsbhub" \
-      org.label-schema.schema-version="1.0"
+ARG MAINTAINER
+ARG NAME
+ARG DESCRIPTION
+ARG URL
+ARG BUILD_DATE
+ARG VCS_URL
+ARG VCS_REF
+
+LABEL maintainer="${MAINTAINER}" \
+  org.label-schema.build-date="${BUILD_DATE}" \
+  org.label-schema.name="${NAME}" \
+  org.label-schema.description="${DESCRIPTION}" \
+  org.label-schema.url="${URL}" \
+  org.label-schema.vcs-ref="${VCS_REF}" \
+  org.label-schema.vcs-url="${VCS_URL}" \
+  org.label-schema.schema-version="1.0"
