--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,11 @@ install:
   - curl -ksSl -o ./travis/enable-experimental-docker.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/enable-experimental-docker.sh"
   - curl -ksSl -o ./travis/build.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/build.sh"
   - curl -ksSl -o ./travis/deploy.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/deploy.sh"
+  - curl -ksSl -o ./travis/success.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/success.sh"
   - sudo bash travis/enable-experimental-docker.sh
   - sudo docker version
+  - sudo bash ./travis-ci/env.sh
+  - sudo env
 
 before_script:
   - sed -i -e '/^$/d' -e 's/^[ \t]*//' -e '/^#/d' dockerfiles/*
@@ -41,7 +44,8 @@ deploy:
   on:
     branch: master
 
-after_success:
+after_deploy:
+  - sudo bash travis/success.sh
 
 notifications:
   email:
@@ -53,9 +57,9 @@ env:
   global:
     - BUILD_DATE="$(date -u +%Y-%m-%dT%H:%M:%SZ)"
     - BUILD_NUMBER="${TRAVIS_BUILD_NUMBER}"
-    - DOCKER_DESCRIPTION="Docker container for ADS-B - This is the adsbhub.org component"
+    - DOCKER_DESCRIPTION="${DESCRIPTION}"
     - DOCKER_MAINTAINER="shoginn"
-    - DOCKER_NAME="adsbhub"
+    - DOCKER_NAME="${REPO_NAME}"
     - DOCKER_URL="https://shoginn.github.io"
     - SCHEMA_VERSION="1.0"
     - VCS_REF="$(git rev-parse --short HEAD)"
