--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ install:
   - curl -ksSl -o ./travis/success.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/success.sh"
   - . ./travis/enable-experimental-docker.sh
   - sudo docker version
-  - if test -f .travis_env; then; set -o allexport; source .travis_env; set +o allexport; fi
+  - if test -f .travis_env; then set -o allexport; source .travis_env; set +o allexport; fi
   - sudo env
 
 before_script:
