--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - curl -ksSl -o ./travis/build.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/build.sh"
   - curl -ksSl -o ./travis/deploy.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/deploy.sh"
   - curl -ksSl -o ./travis/success.sh "https://raw.githubusercontent.com/ShoGinn/docker-builds/master/travis/success.sh"
-  - . ./travis/enable-experimental-docker.sh
+  - sudo bash ./travis/enable-experimental-docker.sh
   - sudo docker version
   - if test -f .travis_env; then set -o allexport; source .travis_env; set +o allexport; fi
   - sudo env
